kubernetes-manifests/currencyservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: currencyservice
spec:
  selector:
    matchLabels:
      app: currencyservice
  template:
    metadata:
      labels:
        app: currencyservice
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: server
        image: eu.gcr.io/tyler-240211/currencyservice:latest
        imagePullPolicy: Always
        ports:
          - name: http
            containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: currencyservice
  labels:
    app: currencyservice
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: currencyservice
