kubernetes-manifests/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-v1
  labels:
    version: v1
spec:
  selector:
    matchLabels:
      app: frontend
      version: v1
  template:
    metadata:
      labels:
        app: frontend
        version: v1
    spec:
      terminationGracePeriodSeconds: 4
      containers:
      - name: server
        image: eu.gcr.io/bruno-1407a/frontend-react:latest
        imagePullPolicy: Always
        ports:
          - name: http
            containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  ports:
  - port: 8080
    name: http
    targetPort: 8080
  selector:
    app: frontend
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: frontend-lb
#   labels:
#     app: frontend-lb
# spec:
#   type: LoadBalancer
#   ports:
#     - port: 80
#       targetPort: 8080
#       protocol: TCP
#       name: http
#   selector:
#     app: frontend
