kubernetes-manifests/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: apigee-lb
spec:
  type: LoadBalancer
  selector:
    app: apigeeproxy
  ports:
  - protocol: TCP
    port: 60000
    targetPort: 8080
