kubernetes-manifests/productcatalogservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: productcatalogservice
spec:
  selector:
    matchLabels:
      app: productcatalogservice
  template:
    metadata:
      labels:
        app: productcatalogservice
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: server
        image: eu.gcr.io/bruno-1407a/productcatalogservice:latest
        imagePullPolicy: Always
        ports:
          - name: http
            containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: productcatalogservice
  labels:
    app: productcatalogservice
spec:
  ports:
  - port: 80
    name: http
    targetPort: 8080
  selector:
    app: productcatalogservice
