kubernetes-manifests/productsearchservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: productsearchservice
spec:
  selector:
    matchLabels:
      app: productsearchservice
  template:
    metadata:
      labels:
        app: productsearchservice
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: server
        image: eu.gcr.io/bruno-1407a/productsearchservice:latest
        imagePullPolicy: Always
        ports:
          - name: http
            containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: productsearchservice
  labels:
    app: productsearchservice
spec:
  ports:
  - port: 80
    name: http
    targetPort: 8080
  selector:
    app: productsearchservice
