kubernetes-manifests/recommendationservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recommendationservice
spec:
  selector:
    matchLabels:
      app: recommendationservice
  template:
    metadata:
      labels:
        app: recommendationservice
    spec:
      terminationGracePeriodSeconds: 6
      containers:
      - name: server
        image: eu.gcr.io/tyler-240211/recommendationservice:latest
        imagePullPolicy: Always
        ports:
          - name: http
            containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: recommendationservice
  labels:
    app: recommendationservice
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: recommendationservice
