kubernetes-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: basic-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "test"
spec:
  backend:
    serviceName: apigee-lb
    servicePort: 60000
